--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,8 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
+
 
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
@@ -25,6 +27,10 @@
 
 
     <link href="css/ionic.app.css" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style type="text/css">
       .platform-ios .manual-ios-statusbar-padding{
